assets/css/2-sections/_home-header.sass
.header-home 
    background: $red-main
    height: 400px
    text-align: center
    display: flex
    flex-direction: column
    justify-content: flex-end

    .logo
        +hide-text
        background:
            image: url(/assets/img/Derrick-Farris-Logo2.svg)
            repeat: no-repeat
            position: center
            size: contain
        height: 200px
        padding: 0
        margin: 30px 0
        flex-grow: 1
        
    .kicker
        text-align: center
        color: white
        font:
            family: 'Open Sans'
            weight: 400
            size: 12px
        text-transform: uppercase
        letter-spacing: 5px
        margin-bottom: 40px
        
        @media (max-width: 390px)
            font-size: 12px
            letter-spacing: 3px
        
    hr
        height: 10px
        background: white
        margin: 0 auto 25px
        padding: 0
        width: 300px
    
    .home-nav
        
        @media (max-width: 940px)
            display: flex
            flex-direction: column
            align-items: center
        
        .button
            
            @media (max-width: 940px)
                margin: 0
                width: 100%

